--- a/index.html
+++ b/index.html
@@ -48,6 +48,49 @@
         </div>
     </header>
 
+   <main class="content">
+    <section class="section container">
+        <div class="section__body">
+            <div class="hero">
+                <div class="hero__main">
+                    <div class="hero__body">
+                        <h1 class="hero__title">Navigating the digital landscape for success</h1>
+                        <div class="hero__discription">
+                            <p>Our digital marketing agency helps businesses grow and succeed online through a range of services including SEO, PPC, social media marketing, and content creation.</p>
+                        </div>
+                        <button class="hero__button button" type="button">Book a consultation</button>
+                        <img src="images/hero-bg.svg" alt="" class="hero__image"
+                        width="600" height="515" loading="lazy">
+                    </div>
+                </div>
+                <div class="hero__partners">
+                    <!-- h2 для скринридера -->
+                    <h2 class="visually-hidden"> Our partners</h2>      
+                    <ul class="hero__partners-list">
+                        <li class="hero__partners-item">
+                            <img src="images/partners/amazon.svg" alt="amazon" class="hero__partners-image" width="130" height="48" loading="lazy">
+                        </li>
+                        <li class="hero__partners-item">
+                            <img src="images/partners/dribble.svg" alt="dribble" class="hero__partners-image" width="130" height="48" loading="lazy">
+                        </li>
+                        <li class="hero__partners-item">
+                            <img src="images/partners/hubspot.svg" alt="hubspot" class="hero__partners-image" width="130" height="48" loading="lazy">
+                        </li>
+                        <li class="hero__partners-item">
+                            <img src="images/partners/notion.svg" alt="notion" class="hero__partners-image" width="130" height="48" loading="lazy">
+                        </li>
+                        <li class="hero__partners-item">
+                            <img src="images/partners/netflix.svg" alt="netflix" class="hero__partners-image" width="130" height="48" loading="lazy">
+                        </li>
+                        <li class="hero__partners-item">
+                            <img src="images/partners/zoom.svg" alt="zoom" class="hero__partners-image" width="130" height="48" loading="lazy">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+   </main>
 
     <dialog class="mobile-overlay visible-mobile" id="mobileOverlay">
         <form class="mobile-overlay__close-button-wrapper" method="dialog">
