Добавлен блок hero

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
 
    <main class="content">
-    <section class="section container">
+    <section class="section section--hidden-x container">
         <div class="section__body">
             <div class="hero">
                 <div class="hero__main">
@@ -59,10 +59,12 @@
                             <p>Our digital marketing agency helps businesses grow and succeed online through a range of services including SEO, PPC, social media marketing, and content creation.</p>
                         </div>
                         <button class="hero__button button" type="button">Book a consultation</button>
+                        </div>
                         <img src="images/hero-bg.svg" alt="" class="hero__image"
                         width="600" height="515" loading="lazy">
                     </div>
-                </div>
+                
+            
                 <div class="hero__partners">
                     <!-- h2 для скринридера -->
                     <h2 class="visually-hidden"> Our partners</h2>      
