--- a/index.html
+++ b/index.html
@@ -94,17 +94,6 @@
     </section>
    </main>
 
-
-   <section class="container">
-    <header class="section__header">
-       <h2 class="section__header puddle-bg">Services</h2>
-       <div class="section__discription">
-        <p>At our digital marketing agency, we offer a range of services to help businesses grow and succeed online. These services include:</p>
-       </div> 
-    </header>
-    <div class="section__body">
-        <div class="services">
-            <ul class="services__list">
            <section class="section container">
       <header class="section__header">
         <h2 class="section__title puddle-bg">Services</h2>
@@ -269,7 +258,7 @@
                     </div>
                     <button class="banner__button button" type="button">Get your free proposal</button>
                     </div>
-                    <img src="/images/banner-bg.svg" alt="" class="banner__image"
+                    <img src="/images/banner-bg.svg" alt="" class="banner__image hidden-mobile"
                     width="494"
                     height="394"
                     loading="lazy">
