Добавлены небольшие исправления: убран горизонтальный скрол у секции hero

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                             <img src="images/partners/hubspot.svg" alt="hubspot" class="hero__partners-image" width="130" height="48" loading="lazy">
                         </li>
                         <li class="hero__partners-item">
-                            <img src="images/partners/notion.svg" alt="notion" class="hero__partners-image" width="130" height="48" loading="lazy">
+                            <img src="images/partners/netflix.svg" alt="notion" class="hero__partners-image" width="130" height="48" loading="lazy">
                         </li>
                         <li class="hero__partners-item">
-                            <img src="images/partners/netflix.svg" alt="netflix" class="hero__partners-image" width="130" height="48" loading="lazy">
+                            <img src="images/partners/notion.svg" alt="netflix" class="hero__partners-image" width="130" height="48" loading="lazy">
                         </li>
                         <li class="hero__partners-item">
                             <img src="images/partners/zoom.svg" alt="zoom" class="hero__partners-image" width="130" height="48" loading="lazy">
@@ -92,7 +92,7 @@
             </div>
         </div>
     </section>
-   </main>
+   
 
            <section class="section container">
       <header class="section__header">
@@ -268,7 +268,7 @@
 
     </div>
    </section>
-
+</main>
     <dialog class="mobile-overlay visible-mobile" id="mobileOverlay">
         <form class="mobile-overlay__close-button-wrapper" method="dialog">
             <button class="mobile-overlay__close-button cross-button" type="submit">
