--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
       </div>
       <form class="footer__subscribe-form subscribe-form">
         <h2 class="visually-hidden">Subsciption</h2>
-        <div class="subscribe-form__field field">
+        <div class="subscribe-form__field field field--big-height field--dark-bg">
           <label class="field__label visually-hidden" for="subscribe-email">Email</label>
               <input 
               class="field__input"
